[gd_scene load_steps=9 format=3 uid="uid://ce0w1r5brioic"]

[ext_resource type="Script" path="res://assets/scripts/combat/enemies/worm/worm_spine_column.gd" id="1_objn5"]
[ext_resource type="PackedScene" uid="uid://c6y7cdcldpi1d" path="res://assets/models/worm/worm_spine-joint.glb" id="1_y0a8r"]
[ext_resource type="Material" uid="uid://d183w2h1ec1g0" path="res://assets/materials/enemies/small_enemy/mat_enemy_body.tres" id="2_daqnk"]
[ext_resource type="Material" uid="uid://bm5ctk0ly50eg" path="res://assets/materials/enemies/worm/mat_worm_body_dead.tres" id="2_r57ax"]
[ext_resource type="PackedScene" uid="uid://cxto61pufeto" path="res://assets/models/worm/worm_spine_blaster.tscn" id="3_u16v4"]
[ext_resource type="Script" path="res://assets/scripts/combat/health/health_component.gd" id="4_8wtne"]
[ext_resource type="Script" path="res://assets/scripts/combat/health/hurtbox.gd" id="5_861n7"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_dvq08"]
height = 5.73081
radius = 5.16644

[node name="WormSpine" type="Node3D" node_paths=PackedStringArray("blasters")]
script = ExtResource("1_objn5")
blasters = [NodePath("WormSpineBlaster"), NodePath("WormSpineBlaster2"), NodePath("WormSpineBlaster3"), NodePath("WormSpineBlaster4")]
mat_dead = ExtResource("2_r57ax")

[node name="worm_spine-joint" parent="." instance=ExtResource("1_y0a8r")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)

[node name="SpineJoint" parent="worm_spine-joint" index="0"]
surface_material_override/0 = ExtResource("2_daqnk")

[node name="WormSpineBlaster" parent="." instance=ExtResource("3_u16v4")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 3)

[node name="WormSpineBlaster2" parent="." instance=ExtResource("3_u16v4")]
transform = Transform3D(-4.37114e-08, 1, -4.37114e-08, 0, -4.37114e-08, -1, -1, -4.37114e-08, 1.91069e-15, 0, 0, 3)

[node name="WormSpineBlaster3" parent="." instance=ExtResource("3_u16v4")]
transform = Transform3D(-4.37114e-08, -8.74228e-08, -1, 0, -1, 8.74228e-08, -1, 3.82137e-15, 4.37114e-08, 0, 0, 3)

[node name="WormSpineBlaster4" parent="." instance=ExtResource("3_u16v4")]
transform = Transform3D(-4.37114e-08, -1, 1.31134e-07, 0, 1.31134e-07, 1, -1, 4.37114e-08, -5.73205e-15, 0, 0, 3)

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("4_8wtne")
health_max = 40

[node name="Hurtbox" type="Area3D" parent="." node_paths=PackedStringArray("health_component")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 0, 0)
collision_layer = 512
collision_mask = 768
script = ExtResource("5_861n7")
health_component = NodePath("../HealthComponent")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(-4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 3, -1.31134e-07, 0)
shape = SubResource("CylinderShape3D_dvq08")

[editable path="worm_spine-joint"]
